...
/**
 *  Pops up an error dialog to alert the user something went wrong.
 *
 *  @param errorDescription text to put into the body of the alert
 */
- (void)showError:(NSString *)errorDescription {
  UIAlertController *alertController = [UIAlertController alertControllerWithTitle:@"Error"
                                                                           message:errorDescription
                                                                    preferredStyle:UIAlertControllerStyleAlert];
  //Alert will retain the block so use weakSelf
  __weak __typeof__(self) weakSelf = self;
  UIAlertAction *okAction = [UIAlertAction actionWithTitle:@"Ok"
                                                     style:UIAlertActionStyleDefault
                                                   handler:^(UIAlertAction * _Nonnull action) {
                                                     [weakSelf dismissViewControllerAnimated:YES completion:nil];
                                                   }];
  [alertController addAction:okAction];
  [self presentViewController:alertController
...
